--- a/data_manipulation.Rmd
+++ b/data_manipulation.Rmd
@@ -80,6 +80,63 @@ arrange(litters_data, gd0_weight)
 arrange(litters_data, desc(pups_born_alive), gd0_weight)
 ```
 
+##Piping!!
+
+
+```{r}
+litters_data_raw = read_csv("./data/FAS_litters.csv",
+  col_types = "ccddiiii")
+litters_data_clean_names = janitor::clean_names(litters_data_raw)
+litters_data_selected_cols = select(litters_data_clean_names, -pups_survive)
+litters_data_with_vars = mutate(litters_data_selected_cols, 
+  wt_gain = gd18_weight - gd0_weight,
+  group = tolower(group))
+litters_data_with_vars
+```
+
+Use nested function calls:
+
+```{r}
+litters_data_clean = 
+  mutate(
+    select(
+      janitor::clean_names(
+        read_csv("./data/FAS_litters.csv", col_types = "ccddiiii")
+        ), 
+    -pups_survive
+    ),
+  wt_gain = gd18_weight - gd0_weight,
+  group = tolower(group)
+  )
+litters_data_clean
+```
+
+Use piping
+
+```{r}
+litters_data = 
+  read_csv("./data/FAS_litters.csv", col_types = "ccddiiii") %>%
+  janitor::clean_names(dat = .) %>%
+  select(.data = ., -pups_survive) %>%
+  mutate(.data = .,
+    wt_gain = gd18_weight - gd0_weight,
+    group = tolower(group))%>%
+lm(gd18_weight ~ gd0_weight, data = .)
+```
+
+
+
+## Illustration
+. represent the data from above
+R assume that position is a data frame and will search above
+like
+runif(n = 20) same as runif(20)  because R assume the first number is n
+
+
+
+
+
+
 
 
 
